[gd_scene load_steps=4 format=3 uid="uid://djw5xm8yk4n7v"]

[ext_resource type="Script" path="res://scripts/ui/loading_screen.gd" id="1_loading"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.2, 0.2, 0.25, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_fg"]
bg_color = Color(0.3, 0.6, 0.9, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="LoadingScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_loading")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="SpinnerContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2

[node name="Spinner" type="ColorRect" parent="CenterContainer/VBoxContainer/SpinnerContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
color = Color(0.3, 0.6, 0.9, 1)

[node name="InnerCircle" type="ColorRect" parent="CenterContainer/VBoxContainer/SpinnerContainer/Spinner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 1)

[node name="TopRightCorner" type="ColorRect" parent="CenterContainer/VBoxContainer/SpinnerContainer/Spinner"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_bottom = 15.0
grow_horizontal = 0
color = Color(0.05, 0.05, 0.08, 1)

[node name="LoadingLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Loading... 0%"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")
theme_override_styles/fill = SubResource("StyleBoxFlat_progress_fg")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="TipLabel" type="Label" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.75, 1)
theme_override_font_sizes/font_size = 16
text = "Tip: Deploy units strategically to counter your opponent's cards"
horizontal_alignment = 1
autowrap_mode = 2
